=== HEAD

* Make *_to_many associations support a :limit option, for specifying a limit to the resulting records (and possibly an offset) (jeremyevans)

* Make association block argument and :eager option affect the _dataset method (jeremyevans)

* Add a :one_to_one option to one_to_many associations, which creates a getter and setter similar to many_to_one (a.k.a. has_one) (jeremyevans)

* add_ and remove_ one_to_many association methods now raise an error if the passed object cannot be saved, instead of saving without validation (jeremyevans)

* Add support for :if option on validations, using a symbol (specifying an instance method) or a proc (dtsato)

=== 2.0.1 (2008-06-04)

* Make the choice of Time or DateTime optional for typecasting :datetime types, default to Time (jeremyevans)

* Reload database schema for table when calling Model.create_table (jeremyevans)

=== 2.0.0 (2008-06-01)

* Comprehensive update of all documentation (jeremyevans)

* Remove methods deprecated in 1.5.0 (jeremyevans)

* Add typecasting on attribute assignment to Sequel::Model objects, optional but enabled by default (jeremyevans)

* Returning false in one of the before_ hooks now causes the appropriate method(s) to immediately return false (jeremyevans)

* Add remove_all_* association method for *_to_many associations, which removes the association with all currently associated objects (jeremyevans)

* Add Model.lazy_load_schema=, when set to true, it loads the schema on first instantiation (jeremyevans)

* Add before_validation and after_validation hooks, called whenever the model is validated (jeremyevans)

* Add Model.default_foreign_key, a private class method that allows changing the default foreign key that Sequel will use in associations (jeremyevans)

* Cache negative lookup when eagerly loading many_to_one associations (jeremyevans)

* Make all associations support the :select option, not just many_to_many (jeremyevans)
