@@ -1,5 +1,7 @@
 === HEAD
 
+* Make all associations support a :read_only option, which doesn't add methods that modify the database (jeremyevans)
+
 * Make *_to_many associations support a :limit option, for specifying a limit to the resulting records (and possibly an offset) (jeremyevans)
 
 * Make association block argument and :eager option affect the _dataset method (jeremyevans)
